@@ -317,7 +317,7 @@ public class Api2OpenAsnEncoder implements Api2AsnEncoder {
 		
 		asnData.setConfirmationType(ConfirmationTypeType.values()[document.getConfirmationType()]);
 		
-		asnData.setDelay(new Long(document.getDelay()));
+		asnData.setDelay(Long.valueOf(document.getDelay()));
 		
 		asnData.setTrainCancelled(document.isTrainCancelled());
 		
@@ -758,11 +758,11 @@ public class Api2OpenAsnEncoder implements Api2AsnEncoder {
 		}
 		
 		if (document.getExternalIssuer() > 0) {
-			asnData.setExternalIssuerId(new Long(document.getExternalIssuer()));
+			asnData.setExternalIssuerId(Long.valueOf(document.getExternalIssuer()));
 		}
 		
 		if (document.getAuthorizationCode() > 0)  {
-			asnData.setIssuerAutorizationId(new Long(document.getAuthorizationCode()));
+			asnData.setIssuerAutorizationId(Long.valueOf(document.getAuthorizationCode()));
 		}
 
 		if (document.getValidRegionList()!= null && document.getValidRegionList().size() > 0) {
@@ -936,11 +936,11 @@ public class Api2OpenAsnEncoder implements Api2AsnEncoder {
 		}
 		
 		if (document.getExternalIssuer()>0) {
-			asnData.setExtIssuerId(new Long(document.getExternalIssuer()));
+			asnData.setExtIssuerId(Long.valueOf(document.getExternalIssuer()));
 		}
 		
 		if (document.getAuthorizationCode()>0)  {
-			asnData.setIssuerAutorizationId(new Long (document.getAuthorizationCode()));
+			asnData.setIssuerAutorizationId(Long.valueOf(document.getAuthorizationCode()));
 		}
 
 		if (document.getValidRegionList() != null && document.getValidRegionList().size() > 0) {
@@ -1031,8 +1031,8 @@ public class Api2OpenAsnEncoder implements Api2AsnEncoder {
 		}
 
 		asnData.setGroupName(document.getGroupName());
-		asnData.setNumberOfCountermark(new Long(document.getNumberOfCountermark()));
-		asnData.setTotalOfCountermarks(new Long(document.getTotalOfCountermarks()));
+		asnData.setNumberOfCountermark(Long.valueOf(document.getNumberOfCountermark()));
+		asnData.setTotalOfCountermarks(Long.valueOf(document.getTotalOfCountermarks()));
 					
 		asnData.setReferenceNum(UicEncoderUtils.getNum(document.getReference()));
 		asnData.setReferenceIA5(UicEncoderUtils.getIA5NonNum(document.getReference()));	
@@ -1145,11 +1145,11 @@ public class Api2OpenAsnEncoder implements Api2AsnEncoder {
 		asnData.setRoute(encodeViaStationCollection(document.getRoute()));
 		
 		if (document.getRouteId() > 0){
-			asnData.setRouteId(new Long(document.getRouteId()));
+			asnData.setRouteId(Long.valueOf(document.getRouteId()));
 		}
 		
 		if (document.getSeriesId() > 0) {
-			asnData.setSeriesId(new Long(document.getSeriesId()));
+			asnData.setSeriesId(Long.valueOf(document.getSeriesId()));
 		}
 		
 		return asnData;
@@ -1290,7 +1290,7 @@ public class Api2OpenAsnEncoder implements Api2AsnEncoder {
 		asnData.setTerminatingStationNum(UicEncoderUtils.getNum(data.getTerminatingStation()));	
 		
 		if (data.getCity() > 0) {
-			asnData.setCity(new Long(data.getCity()));
+			asnData.setCity(Long.valueOf(data.getCity()));
 		}
 		
 		asnData.setLineId(SequenceOfUnrestrictedLong.getSequence(UicEncoderUtils.encodeIntegerCollection(data.getLineIds())));
@@ -1650,7 +1650,7 @@ public class Api2OpenAsnEncoder implements Api2AsnEncoder {
 		asnData.setNumberOfValidityDays(UicEncoderUtils.getRestrictedInt(document.getNumberOfValidityDays(), 1, 370));
 		asnData.setPassDescription(document.getPassDescription());
 		if (document.getPassType() > 0 ){
-			asnData.setPassType(new Long(document.getPassType()));
+			asnData.setPassType(Long.valueOf(document.getPassType()));
 		}
 		
 		asnData.setTariffs(encodeTariffCollection(document.getTariffs()));
@@ -1702,8 +1702,8 @@ public class Api2OpenAsnEncoder implements Api2AsnEncoder {
 				}
 				
 			    TimeRangeType asnRange = new TimeRangeType();
-			    asnRange.setFromTime(new Long(range.getFromTime()));
-			    asnRange.setUntilTime(new Long(range.getUntilTime()));			
+			    asnRange.setFromTime(Long.valueOf(range.getFromTime()));
+			    asnRange.setUntilTime(Long.valueOf(range.getUntilTime()));			
 			    		    
 				asnData.getExcludedTimeRange().add(asnRange);
 			}
@@ -1811,7 +1811,7 @@ public class Api2OpenAsnEncoder implements Api2AsnEncoder {
 		asnData.setReferenceIA5(UicEncoderUtils.getIA5NonNum(document.getReference()));	
 
 		if (document.getNumberOfdaysAllowed() > 0) {
-			asnData.setNumberOfDaysValid(new Long(document.getNumberOfdaysAllowed()));
+			asnData.setNumberOfDaysValid(Long.valueOf(document.getNumberOfdaysAllowed()));
 		}
 		
 		asnData.setProductName(document.getProductName());
@@ -2271,8 +2271,8 @@ public class Api2OpenAsnEncoder implements Api2AsnEncoder {
 		VatDetailType asnVatDetail = new VatDetailType();
 		
 		asnVatDetail.setAmount(vatDetail.getAmount());
-		asnVatDetail.setCountry(new Long(vatDetail.getCountry()));
-		asnVatDetail.setPercentage(new Long(vatDetail.getPercentage()));
+		asnVatDetail.setCountry(Long.valueOf(vatDetail.getCountry()));
+		asnVatDetail.setPercentage(Long.valueOf(vatDetail.getPercentage()));
 		asnVatDetail.setVatId(vatDetail.getVatId());
 		
 		return asnVatDetail;
@@ -2351,7 +2351,7 @@ public class Api2OpenAsnEncoder implements Api2AsnEncoder {
 		CustomerStatusType asnStatus = new CustomerStatusType();
 		
 		if (status.getStatus() > 0) {
-			asnStatus.setCustomerStatus(new Long(status.getStatus()));
+			asnStatus.setCustomerStatus(Long.valueOf(status.getStatus()));
 		}
 		asnStatus.setCustomerStatusDescr(status.getDescription());
 		asnStatus.setStatusProviderIA5(UicEncoderUtils.getIA5NonNum(status.getStatusProvider()));
@@ -2398,10 +2398,6 @@ public class Api2OpenAsnEncoder implements Api2AsnEncoder {
 		if (apiClass == ITravelClassType.premiumSecond || apiClass == ITravelClassType.standardSecond){
 			return TravelClassType.second;
 		}
-		
-		
-		
-		
 		
 		return TravelClassType.valueOf(apiClass.name());
 	
