@@ -1975,7 +1975,7 @@ public class OpenAsn2ApiDecoderV2 implements Asn2ApiDecoder {
 		
 		if (asnDocument.getIncludedServices() != null && !asnDocument.getIncludedServices().isEmpty()){
 			for (Long service: asnDocument.getIncludedServices()){
-				card.addIncludedService(new Integer(service.intValue()));	
+				card.addIncludedService(Integer.valueOf(service.intValue()));	
 			}
 		}
 		
